--- a/configs/clarius_rf.yaml
+++ b/configs/clarius_rf.yaml
@@ -16,12 +16,15 @@ seg_loader_kwargs:
 # Screen 4: Analysis Type / Customization
 analysis_type: paramap
 analysis_kwargs:
+  ref_attenuation: 0.6932 # dB/cm/MHz
+  ref_bsc: 0.0006277 # 1/cm-sr @ center frequency
+
 analysis_funcs:                             # Empty list means all functions
   - lizzi_feleppa
   - nakagami_params
   - hkd_xu
-  # - attenuation_coef
-  # - bsc
+  - attenuation_coef
+  - bsc
 
 # Screen 5: Analysis Configuration (either from GUI or saved)
 config_path:
